[tool.poetry]
name = "python-sdformat"
version = "0.4.0"
description = "Python Parser for SDFormat files."

[tool.poetry.dependencies]
python = "^3.7"
lxml = "^4.8.0"
numpy = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
